fixed sume bugs

--- a/stralur/registration/signup/signup.html
+++ b/stralur/registration/signup/signup.html
@@ -36,7 +36,7 @@
             </div>
 
             <div>
-              <form action="password.html" method="POST" class="needs-validation" novalidate autocomplete="on">
+              <form action="password.html" class="needs-validation" novalidate autocomplete="on">
                 <div class="form-floating mb-3">
                   <input type="email" class="form-control rounded-1" id="floatingInput" placeholder="name@example.com" value="" required style="background: transparent; color: #ffffff; width: 301px; border-color: #2C3135;">
                   <label for="floatingInput">Email address</label>
