--- a/stralur/registration/signin/signin.html
+++ b/stralur/registration/signin/signin.html
@@ -35,7 +35,7 @@
             </div>
 
             <div>
-              <form action="./loginprompt.html" method="POST" class="needs-validation" novalidate autocomplete="on">
+              <form action="./loginprompt.html" class="needs-validation" novalidate autocomplete="on">
 
                 <div class="form-floating mb-3">
                   <input type="email" class="form-control rounded-1" id="floatingInput" placeholder="name@example.com" value="" required style="background: transparent; color: #ffffff; width: 301px; border-color: #2C3135;">
