--- a/stralur/registration/signup/password.html
+++ b/stralur/registration/signup/password.html
@@ -36,7 +36,7 @@
             </div>
 
             <div>
-              <form action="username.html" method="POST" class="needs-validation" novalidate autocomplete="on">
+              <form action="username.html" class="needs-validation" novalidate autocomplete="on">
                 <div class="form-floating mb-3">
                   <input type="password" class="form-control rounded-1" pattern=".{8,}" id="floatingPassword" placeholder="Password" value="" required style="background: transparent; color: #ffffff; width: 301px; border-color: #2C3135;">
                   <label for="floatingPassword">Password</label>
