--- a/stralur/registration/signup/username.html
+++ b/stralur/registration/signup/username.html
@@ -35,7 +35,7 @@
             </div>
 
             <div>
-              <form action="../upgrade/billing.html" method="POST" class="needs-validation" novalidate autocomplete="on">
+              <form action="../upgrade/billing.html" class="needs-validation" novalidate autocomplete="on">
                 <div class="form-floating mb-3">
                   <input onsubmit="checkCookie()" type="text" class="form-control rounded-1 usernameInput" id="floatingInput" placeholder="username" pattern=".{5,}" value="" required style="background: transparent; color: #ffffff; width: 301px; border-color: #2C3135;">
                   <label for="floatingInput">New Username</label>
